update workflow files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,8 @@ jobs:
           etoolbox
           makecell
           caption
+          tikz
+          xcolor
     - name: build PDF
       run: make latexpdf
     - name: extract file name
